--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         const eightLogoElement = document.getElementById('eight-logo');
         const responseTextElement = document.getElementById('response-text');
         let isShaking = false;
-        const responses = [ "Definitely probably", "Pssshhhht!", "How about NO?", "Wouldn't you like to know!", "Trust me, you don't want to know.", "Don't know. Don't care.", "Meh.", "Play stupid games, win stupid prizes.", "New Ball. Who this?", "Harder Daddy", "Ever heard of Google?", "Better not tell you now.", "If you're reading this you're gay.", "We have been trying to reach you regarding your car's extended warranty.", "For best result, put me in your ass.", "SIIIIIT!", "My sources say no.", "Outlook not so good.", "Very doubtful." ];
+        const responses = [ "Definitely probably", "Pssshhhht!", "How about NO?", "Wouldn't you like to know!", "Trust me, you don't want to know.", "Don't know. Don't care.", "Meh.", "Play stupid games, win stupid prizes.", "New Ball. Who this?", "Harder Daddy", "Ever heard of Google?", "Better not tell you now.", "If you're reading this you're gay.", "We have been trying to reach you regarding your car's extended warranty.", "For best result, put me in your ass.", "My sources say no.", "Outlook not so good.", "Very doubtful." ];
         
         function resetBall() {
             responseTextElement.classList.add('opacity-0');
